--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ font-size: 20px}
 h1{background-color: lightyellow;
 opacity: 0.8;
 color: darkseagreen;}
-.introduction{
+p{
   border-style: solid;
   font-size: 20px;
   border: 5px;
-  border-color: red yellow;
+  border-color: yellow;
   background-color: lightgoldenrodyellow;}
